# polytryhard

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.ui  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.greptile/: config.json  files.json  instructions.md
core/: __init__.py  clock.py  migrations.py  scheduler.py  settings.py
docs/: DEPLOYMENT.md  PDD.md  architecture-review.md
scripts/: backfill_market_strikes.py  export_openapi.py  init-local-dbs.sql  staging_soak_snapshot.py  start-api.sh  verify_bracket_semantics.py
tests/: conftest.py  helpers.py  test_api_v1_audit.py  test_api_v1_eval.py  test_api_v1_signals_positions.py  test_api_v1_sources.py  test_api_v1_strategies.py  test_api_v1_system.py  test_clock.py  test_contract_resolution_model.py  test_db_smoke.py  test_engine_markets.py  test_engine_strategy_feature_seam.py  test_engine_tick.py  test_eval_calibration.py  test_eval_metrics.py  test_eval_posterior.py  test_eval_queries.py  test_eval_read.py  test_eval_recompute_integration.py  test_eval_snapshot.py  test_eval_snapshot_model.py  test_executor_registry.py  test_feature_persistence.py  test_feature_value.py  test_feature_weather_model_prob.py  test_features.py  test_healthz.py  test_ingestion_cassettes.py  test_kalshi_auth.py  test_kalshi_parse.py  test_kalshi_resolution_parse.py  test_ledger_deposit_withdraw.py  test_ledger_invariant_property.py  test_ledger_paper_hooks.py  test_ledger_purity_guard.py  test_ledger_reason_validation.py  (+21 more)
(+188 files in other folders)
