[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "polytryhard"
version = "0.1.0"
description = "Statistical research lab for prediction markets"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18,<2",
    "asyncpg>=0.31,<1",
    "fastapi>=0.136,<1",
    "greenlet>=3.5,<4",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "psycopg[binary]>=3.3,<4",
    "sqlalchemy>=2,<3",
    "uvicorn[standard]>=0.48,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "mypy>=2.1,<3",
    "pytest>=9,<10",
    "pytest-asyncio>=1.4,<2",
    "ruff>=0.15,<1",
    "testcontainers[postgres]>=4.14,<5",
    "hypothesis>=6,<7",
]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"core/api/v1/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["alembic.*", "testcontainers.*"]
ignore_missing_imports = true
